# animation

./: .gitignore  CMakeLists.txt  README.md  behavior.cpp  motion_detection.py  physics.cpp  playground.cpp  readme.md
common/: gl_util.h  math.h
elements/: motion.h  rigid_object.h  segment.h
helper/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  controls.cpp  controls.h  facemark.hpp  objLoader.h  objloader.cpp  objloader.h  shader.cpp  textureLoader.cpp  textureLoader.h  vboindexer.cpp
runtime/: StandardShading.fragmentshader  playground
src/common/: gl_util.h  math.h
src/helper/: objLoader.h  texture.cpp  utils.cpp  vbo_indexer.cpp
src/object/: buffer_object.cpp  buffer_object.h  gl_camera.cpp  gl_camera.h  gl_object.cpp  gl_object.h  rigid_object.cpp  rigid_object.h  segment.cpp  segment.h
